Fixes padding and spacing issues

--- a/styleguide/source/_patterns/03-templates/04-topic/_topic.scss
+++ b/styleguide/source/_patterns/03-templates/04-topic/_topic.scss
@@ -22,12 +22,8 @@
 // Set mobile order.
 .topic .grid-region {
 
-  .grid-region_content:not(:last-child){
-    @include gutter($padding-bottom-full...);
-  }
-
-  .grid-region_content.titleOnly:not(:last-child){
-    @include gutter($padding-bottom-half...);
+  .grid-region_content:not(:first-child){
+    @include gutter($padding-top-full...);
   }
 
   // First column.
@@ -41,6 +37,11 @@
     @include breakpoint($bp-med) {
       grid-area: 1 / 1 / 4 / 1;
       padding-left: 14px;
+    }
+
+    .grid-region_content.topic_topic-articles > div {
+      padding-top: 0;
+      @include gutter($padding-bottom-full...);
     }
   }
 
